--- a/docker/docker_for_django/Dockerfile
+++ b/docker/docker_for_django/Dockerfile
@@ -1,7 +1,8 @@
-FROM python:2.7
+FROM ojajoh/docker-python3-oracle-base
 ENV PYTHONUNBUFFERED 1
 RUN mkdir /code
 WORKDIR /code
 ADD requirements.txt /code/
-RUN pip install -r requirements.txt
+RUN pip3 install -U pip 
+RUN pip3 install -r requirements.txt
 ADD . /code/
