--- a/docker/docker_for_django/docker-compose.yml
+++ b/docker/docker_for_django/docker-compose.yml
@@ -1,11 +1,22 @@
-  db:
-    image: postgres
-  web:
-    build: .
-    command: python manage.py runserver 0.0.0.0:8020
-    volumes:
-      - .:/code
-    ports:
-      - "8020:8020"
-    links:
-      - db
+db:
+  image: alexeiled/docker-oracle-xe-11g
+  ports:
+    - "1521:1521"
+web:
+  build: .
+  command: python3 manage.py runserver 0.0.0.0:8020
+  volumes:
+    - .:/code
+  ports:
+    - "8020:8020"
+  links:
+    - db
+migration:
+  build: .
+  command: python3 manage.py migrate
+  volumes:
+    - .:/code
+  ports:
+    - "8020:8020"
+  links:
+    - db
