Show the difference of behaviour of chords using the redis backend

--- a/python/django/learn_celery/experimenting/Makefile
+++ b/python/django/learn_celery/experimenting/Makefile
@@ -5,11 +5,15 @@ start_rabbitmq: build_image
 	docker-compose up -d
 
 start_worker:
-	BROKER_URL=amqp://admin:mypass@`docker inspect -f '{{.NetworkSettings.Networks.experimenting_default.IPAddress}}' experimenting_rabbitmq_1`// ./start_worker.sh
+	BROKER_URL=amqp://admin:mypass@`docker inspect -f '{{.NetworkSettings.Networks.experimenting_default.IPAddress}}' experimenting_rabbitmq_1`// BACKEND_URL=redis://`docker inspect -f '{{.NetworkSettings.Networks.experimenting_default.IPAddress}}' experimenting_redis_1` ./start_worker.sh
+
+test_chord:
+	BROKER_URL=amqp://admin:mypass@`docker inspect -f '{{.NetworkSettings.Networks.experimenting_default.IPAddress}}' experimenting_rabbitmq_1`// BACKEND_URL=redis://`docker inspect -f '{{.NetworkSettings.Networks.experimenting_default.IPAddress}}' experimenting_redis_1` python3 test_chord.py
+
 
 clean: stop_all
 	find . -name *.pyc | xargs rm
 	rmdir __pycache__
 
 stop_rabbitmq:
-	docker-compose stop
+	docker-compose down
