On clean stop also the servers

--- a/python/django/learn_celery/experimenting/Makefile
+++ b/python/django/learn_celery/experimenting/Makefile
@@ -1,7 +1,7 @@
 build_image:
 	docker-compose build
 
-start_rabbitmq: build_image
+start_servers: build_image
 	docker-compose up -d
 
 start_worker:
@@ -11,9 +11,9 @@ test_chord:
 	BROKER_URL=amqp://admin:mypass@`docker inspect -f '{{.NetworkSettings.Networks.experimenting_default.IPAddress}}' experimenting_rabbitmq_1`// BACKEND_URL=redis://`docker inspect -f '{{.NetworkSettings.Networks.experimenting_default.IPAddress}}' experimenting_redis_1` python3 test_chord.py
 
 
-clean: stop_all
+clean: stop_servers
 	find . -name *.pyc | xargs rm
 	rmdir __pycache__
 
-stop_rabbitmq:
+stop_servers:
 	docker-compose down
